--- a/.gitignore
+++ b/.gitignore
@@ -124,11 +124,13 @@ celerybeat.pid
 # Environments
 .env
 .venv
+.my_PFDA_env
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+my_PFDA_env/
 
 # Spyder project settings
 .spyderproject
@@ -160,3 +162,5 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+messing.py
